Added a constructor that do not require a MethodModel so that I can use this class in PartialEvaluator, I haven't tested this class again, but the functionality should remain unchanged.